--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,10 @@ target_link_libraries(exampleSaltMineDetector ${Geant4_LIBRARIES})
 # relies on these scripts being in the current working directory.
 #
 set(EXAMPLESaltMineDetector_SCRIPTS
-  run.mac
+   init_vis.mac
+  run1.mac
+  run2.mac
+  vis.mac
   )
 
 foreach(_script ${EXAMPLESaltMineDetector_SCRIPTS})
